--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "net", "time", "sync"] }
 uuid = { version = "1", features = ["v4"] }
+chrono = "0.4"
 dirs-next = "2"
 reqwest = { version = "0.12", features = ["json"] }
 opener = "0.7"
