fix: 细致检查前端导入错误

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:check": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "lint": "oxlint",
+    "lint": "npx -y tsc --noEmit && oxlint",
     "lint:fix": "oxlint --fix",
     "fmt": "oxfmt",
     "fmt:check": "oxfmt --check"
