--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "import/no-unused-modules": "off",
     "import/no-unresolved": ["error"],
+    "import/named": ["error"],
     "import/no-unassigned-import": [
       "error",
       {
@@ -22,7 +23,18 @@
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx", ".vue", ".css"]
+      },
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "./tsconfig.json"
+      },
+      "alias": {
+        "map": [["@", "./src"]],
+        "extensions": [".js", ".jsx", ".ts", ".tsx", ".vue"]
       }
+    },
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx", ".vue"]
     },
     "jsx-a11y": {
       "polymorphicPropName": null,
@@ -58,6 +70,14 @@
     "node": true,
     "es2022": true
   },
+  "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx", "**/*.vue"],
+      "parserOptions": {
+        "project": "./tsconfig.json"
+      }
+    }
+  ],
   "globals": {},
   "ignorePatterns": ["dist", "node_modules", "src-tauri/**"]
 }
