fix: 代码格式优化，调整多处代码中的换行和引号样式

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -72,10 +72,7 @@
   },
   "overrides": [
     {
-      "files": ["**/*.ts", "**/*.tsx", "**/*.vue"],
-      "parserOptions": {
-        "project": "./tsconfig.json"
-      }
+      "files": ["**/*.ts", "**/*.tsx", "**/*.vue"]
     }
   ],
   "globals": {},
