--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,19 +3,54 @@ name: "代码质量检查"
 on:
   pull_request:
   push:
-    branches:
-      - main
-      - dev
+    branches: [main, dev]
 
 jobs:
+  # 第一步：检测变更文件
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      backend: ${{ steps.filter.outputs.backend }}
+      frontend: ${{ steps.filter.outputs.frontend }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            backend:
+              - 'src-tauri/**'
+              - 'src-tauri/Cargo.toml'
+              - 'src-tauri/**/*.rs'
+              - 'Cargo.toml'
+              - 'Cargo.lock'
+            frontend:
+              - 'src/**'
+              - 'package*.json'
+              - 'package-lock.json'
+              - 'pnpm-lock.yaml'
+              - 'yarn.lock'
+              - 'vite.config.ts'
+              - 'tsconfig*.json'
+              - 'index.html'
+              - 'public/**'
+              - 'assets/**'
+              - 'src/**/*.vue'
+              - 'src/**/*.ts'
+              - 'src/**/*.css'
+
   backend:
     name: 后端检查 (Rust)
+    needs: changes
+    # 关键：只有 backend 文件变更时才运行
+    if: ${{ needs.changes.outputs.backend == 'true' }}
     runs-on: ubuntu-24.04
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
 
-      - name: 安装系统依赖 (后端需要)
+      - name: 安装系统依赖
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
@@ -38,6 +73,9 @@ jobs:
 
   frontend:
     name: 前端检查 (Node)
+    needs: changes
+    # 关键：只有 frontend 文件变更时才运行
+    if: ${{ needs.changes.outputs.frontend == 'true' }}
     runs-on: ubuntu-24.04
     steps:
       - name: 检出代码
@@ -48,8 +86,16 @@ jobs:
         with:
           node-version: "lts/*"
 
+      - name: 缓存 npm 依赖
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: 安装前端依赖
-        run: npm install
+        run: npm ci
 
       - name: 运行格式化并检查前端 Lint
         run: |
