--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "fmt": "oxfmt",
-    "fmt:check": "oxfmt --check"
+    "fmt:check": "oxfmt --check",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -35,6 +37,8 @@
     "terser": "^5.46.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3",
+    "vitest": "^3.1.4",
+    "@vitest/coverage-v8": "^3.1.4",
     "vue-tsc": "^2.1.10"
   }
 }
