--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -107,7 +107,7 @@ jobs:
 
       - name: 安装前端依赖
         if: ${{ needs.changes.outputs.frontend == 'true' }}
-        run: npm install
+        run: npm ci
 
       - name: 运行格式化并检查前端 Lint
         if: ${{ needs.changes.outputs.frontend == 'true' }}
