--- a/.github/workflows/push-aur.yml
+++ b/.github/workflows/push-aur.yml
@@ -15,17 +15,10 @@ jobs:
 
       - name: Install makepkg dependencies
         run: |
-          sudo apt update
-          sudo apt install -y fakeroot build-essential
-          # 下载并安装 makepkg（pacman-pkg）
-          wget https://sources.archlinux.org/other/pacman/pacman-7.0.0.tar.xz
-          tar -xf pacman-7.0.0.tar.xz
-          cd pacman-7.0.0
-          ./configure --prefix=/usr
-          make
-          sudo make install
-          cd ..
-          rm -rf pacman-7.0.0*
+          sudo apt-get update
+          sudo apt-get install -y base-devel fakeroot
+          # 安装 pacman-pkgbuild 工具
+          sudo apt-get install -y pkgbuild
 
       - name: Get release version
         id: get_version
@@ -36,7 +29,8 @@ jobs:
           VERSION=${VERSION#v}
           sed -i "s/^pkgver=.*/pkgver=${VERSION}/" PKGBUILD
           sed -i "s/^pkgrel=.*/pkgrel=1/" PKGBUILD
-          # 注意：不再使用 makepkg，因为 .SRCINFO 会在 Action 中自动生成
+          # 使用 pkgbuild 工具生成 .SRCINFO
+          pkgbuild --printsrcinfo > .SRCINFO
         env:
           VERSION: ${{ steps.get_version.outputs.VERSION }}
 
@@ -45,13 +39,10 @@ jobs:
         with:
           pkgname: sealantern
           pkgbuild: PKGBUILD
-          assets: |
-            .SRCINFO
-            sealantern.install
-            sealantern.desktop
-          commit_username: ${{ secrets.AUR_USERNAME }}
-          commit_email: ${{ secrets.AUR_EMAIL }}
+          assets: .SRCINFO
+          commit_username: "GitHub Actions"
+          commit_email: "actions@github.com"
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
           commit_message: "Update to version ${{ steps.get_version.outputs.VERSION }}"
           allow_empty_commits: false
-          ssh_keyscan_types: rsa,ecdsa,ed25519
+          force_push: false
