--- a/.github/workflows/push-aur.yml
+++ b/.github/workflows/push-aur.yml
@@ -13,36 +13,102 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install makepkg dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y base-devel fakeroot
-          # 安装 pacman-pkgbuild 工具
-          sudo apt-get install -y pkgbuild
+          # 安装必要工具
+          sudo apt-get install -y git
+
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+
+      - name: Add AUR to known hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan aur.archlinux.org >> ~/.ssh/known_hosts
 
       - name: Get release version
         id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+        run: |
+          # 移除版本号前的 'v' 如果存在
+          VERSION=${GITHUB_REF#refs/tags/}
+          VERSION=${VERSION#v}
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted version: $VERSION"
+
+      - name: Validate PKGBUILD exists
+        run: |
+          if [ ! -f "PKGBUILD" ]; then
+            echo "Error: PKGBUILD file not found!"
+            exit 1
+          fi
 
       - name: Update PKGBUILD version
         run: |
-          VERSION=${VERSION#v}
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+
+          # 备份原始 PKGBUILD
+          cp PKGBUILD PKGBUILD.bak
+
+          # 更新版本号
           sed -i "s/^pkgver=.*/pkgver=${VERSION}/" PKGBUILD
           sed -i "s/^pkgrel=.*/pkgrel=1/" PKGBUILD
-          # 使用 pkgbuild 工具生成 .SRCINFO
-          pkgbuild --printsrcinfo > .SRCINFO
-        env:
-          VERSION: ${{ steps.get_version.outputs.VERSION }}
+
+          # 如果存在 source 数组，更新下载链接中的版本号
+          sed -i "s/\${pkgver}/${VERSION}/g" PKGBUILD
+
+          echo "Updated PKGBUILD content:"
+          cat PKGBUILD
+
+      - name: Generate .SRCINFO
+        run: |
+          # 使用 makepkg 生成 .SRCINFO
+          if ! command -v makepkg &> /dev/null; then
+            echo "makepkg not found, installing..."
+            sudo apt-get install -y pacman-package-manager
+          fi
+
+          # 生成 .SRCINFO
+          makepkg --printsrcinfo > .SRCINFO
+
+          echo "Generated .SRCINFO content:"
+          cat .SRCINFO
+
+      - name: Validate files
+        run: |
+          echo "Checking generated files:"
+          ls -la PKGBUILD .SRCINFO
+
+          # 验证 .SRCINFO 是否有效
+          if [ ! -s ".SRCINFO" ]; then
+            echo "Error: .SRCINFO is empty or not generated"
+            exit 1
+          fi
 
       - name: Publish AUR package
         uses: KSXGitHub/github-actions-deploy-aur@v3.0.1
         with:
           pkgname: sealantern
           pkgbuild: PKGBUILD
-          assets: .SRCINFO
-          commit_username: "GitHub Actions"
-          commit_email: "actions@github.com"
+          assets: |
+            .SRCINFO
+          commit_username: "${{ github.actor }}"
+          commit_email: "${{ github.actor }}@users.noreply.github.com"
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
           commit_message: "Update to version ${{ steps.get_version.outputs.VERSION }}"
           allow_empty_commits: false
           force_push: false
+          updpkgsums: true
+          test: true
+          ssh_keyscan_types: rsa,ecdsa,ed25519
+
+      - name: Cleanup
+        if: always()
+        run: |
+          # 恢复原始 PKGBUILD（如果需要）
+          if [ -f "PKGBUILD.bak" ]; then
+            mv PKGBUILD.bak PKGBUILD
+          fi
