修改版本号的问题

--- a/.github/workflows/push-aur.yml
+++ b/.github/workflows/push-aur.yml
@@ -18,6 +18,8 @@ on:
 jobs:
   aur-publish:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.get_version.outputs.VERSION }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -57,11 +59,27 @@ jobs:
 
           if [[ -z "$VERSION" ]]; then
             echo "Error: Version is empty!"
+            echo "GitHub event name: ${{ github.event_name }}"
+            echo "Manual input version: ${{ github.event.inputs.version }}"
+            echo "GITHUB_REF: $GITHUB_REF"
             exit 1
           fi
 
+          # 设置输出变量
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
-          echo "Extracted version: $VERSION"
+          echo "version=$VERSION" >> $GITHUB_ENV
+
+          echo "✅ Extracted version: $VERSION"
+          echo "Version output set to: $VERSION"
+
+      - name: Debug version info
+        run: |
+          echo "Debug information:"
+          echo "Event name: ${{ github.event_name }}"
+          echo "Version from get_version: ${{ steps.get_version.outputs.VERSION }}"
+          echo "Version from env: ${{ env.VERSION }}"
+          echo "Manual input: ${{ github.event.inputs.version }}"
+          echo "GITHUB_REF: $GITHUB_REF"
 
       - name: Validate PKGBUILD exists
         run: |
@@ -72,27 +90,36 @@ jobs:
             exit 1
           fi
 
-          echo "PKGBUILD found:"
-          head -20 PKGBUILD
+          echo "✅ PKGBUILD found:"
+          head -5 PKGBUILD
 
       - name: Update PKGBUILD version
         run: |
           VERSION="${{ steps.get_version.outputs.VERSION }}"
 
+          if [[ -z "$VERSION" ]]; then
+            echo "Error: VERSION is empty in Update PKGBUILD version step"
+            exit 1
+          fi
+
+          echo "Updating PKGBUILD to version: $VERSION"
+
           # 备份原始 PKGBUILD
           cp PKGBUILD PKGBUILD.bak
 
-          # 更新版本号
+          # 更新版本号 - 使用更可靠的方法
           if grep -q "^pkgver=" PKGBUILD; then
             sed -i "s/^pkgver=.*/pkgver=${VERSION}/" PKGBUILD
+            echo "✅ Updated pkgver to ${VERSION}"
           else
-            echo "Warning: pkgver not found in PKGBUILD, adding it"
+            echo "⚠️ Warning: pkgver not found in PKGBUILD, adding it"
             echo "pkgver=${VERSION}" >> PKGBUILD
           fi
 
           # 重置发布号
           if grep -q "^pkgrel=" PKGBUILD; then
             sed -i "s/^pkgrel=.*/pkgrel=1/" PKGBUILD
+            echo "✅ Reset pkgrel to 1"
           else
             echo "pkgrel=1" >> PKGBUILD
           fi
@@ -100,80 +127,102 @@ jobs:
           # 如果存在 source 数组，更新下载链接中的版本号
           if grep -q "^source=" PKGBUILD; then
             sed -i "s/\${pkgver}/${VERSION}/g" PKGBUILD
-            # 也替换直接写死的版本号（常见格式）
-            sed -i "s/[0-9]\+\.[0-9]\+\.[0-9]\+/${VERSION}/g" PKGBUILD
+            # 也替换直接写死的版本号（常见格式如 0.1.15 -> 0.1.16）
+            OLD_VERSION=$(grep "^pkgver=" PKGBUILD.bak | cut -d= -f2 | xargs || echo "")
+            if [[ -n "$OLD_VERSION" && "$OLD_VERSION" != "$VERSION" ]]; then
+              echo "Replacing old version $OLD_VERSION with $VERSION in source URLs"
+              sed -i "s/${OLD_VERSION}/${VERSION}/g" PKGBUILD
+            fi
+            echo "✅ Updated source URLs"
           fi
 
-          echo "Updated PKGBUILD content:"
+          echo "✅ Updated PKGBUILD content:"
           echo "-----------------------"
-          cat PKGBUILD
+          grep -E "^(pkgver|pkgrel|source)=" PKGBUILD || cat PKGBUILD
           echo "-----------------------"
 
       - name: Generate .SRCINFO
         run: |
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+
+          if [[ -z "$VERSION" ]]; then
+            echo "Error: VERSION is empty in Generate .SRCINFO step"
+            exit 1
+          fi
+
+          # 定义创建基本 .SRCINFO 的函数
+          create_basic_srcinfo() {
+            local VERSION=$1
+            cat > .SRCINFO << EOF
+            pkgbase = sealantern
+            \tpkgdesc = $(grep "^pkgdesc=" PKGBUILD | cut -d= -f2- | xargs 2>/dev/null || echo "SeaLantern package")
+            \tpkgver = ${VERSION}
+            \tpkgrel = 1
+            \turl = $(grep "^url=" PKGBUILD | cut -d= -f2- | xargs 2>/dev/null || echo "")
+            \tinstall = $(grep "^install=" PKGBUILD | cut -d= -f2- | xargs 2>/dev/null || echo "")
+            \tarch = $(grep "^arch=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs 2>/dev/null || echo "any")
+            \tlicense = $(grep "^license=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs 2>/dev/null || echo "unknown")
+            \tdepends = $(grep "^depends=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs 2>/dev/null || echo "")
+            \tmakedepends = $(grep "^makedepends=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs 2>/dev/null || echo "")
+            \tsource = $(grep "^source=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs 2>/dev/null || echo "")
+            \tsha256sums = $(grep "^sha256sums=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs 2>/dev/null || echo "SKIP")
+
+            pkgname = sealantern
+            EOF
+          }
+
           # 尝试使用 makepkg 生成 .SRCINFO
           if command -v makepkg &> /dev/null; then
             echo "Using makepkg to generate .SRCINFO"
             makepkg --printsrcinfo > .SRCINFO
-          else
-            echo "makepkg not found, trying to install..."
-            sudo apt-get install -y pacman-package-manager
-
-            if command -v makepkg &> /dev/null; then
-              makepkg --printsrcinfo > .SRCINFO
+            if [ $? -eq 0 ]; then
+              echo "✅ makepkg generated .SRCINFO successfully"
             else
-              echo "Warning: Could not install makepkg, creating basic .SRCINFO"
-              # 创建基本的 .SRCINFO（仅作备选）
-              VERSION="${{ steps.get_version.outputs.VERSION }}"
-              cat > .SRCINFO << EOF
-                pkgbase = sealantern
-                \tpkgdesc = $(grep "^pkgdesc=" PKGBUILD | cut -d= -f2- | xargs)
-                \tpkgver = ${VERSION}
-                \tpkgrel = 1
-                \turl = $(grep "^url=" PKGBUILD | cut -d= -f2- | xargs)
-                \tinstall = $(grep "^install=" PKGBUILD | cut -d= -f2- | xargs 2>/dev/null || echo "")
-                \tarch = $(grep "^arch=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs)
-                \tlicense = $(grep "^license=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs)
-                \tdepends = $(grep "^depends=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs)
-                \tmakedepends = $(grep "^makedepends=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs)
-                \tsource = $(grep "^source=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs)
-                \tsha256sums = $(grep "^sha256sums=" PKGBUILD | cut -d= -f2- | tr -d '()' | xargs)
-
-                pkgname = sealantern
-                EOF
+              echo "⚠️ makepkg failed, creating basic .SRCINFO"
+              create_basic_srcinfo "$VERSION"
             fi
+          else
+            echo "makepkg not found, creating basic .SRCINFO"
+            create_basic_srcinfo "$VERSION"
           fi
 
-          echo "Generated .SRCINFO content:"
+          echo "✅ Generated .SRCINFO content:"
           echo "------------------------"
           cat .SRCINFO
           echo "------------------------"
 
       - name: Validate files
         run: |
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+
           echo "Checking generated files:"
           ls -la PKGBUILD .SRCINFO
 
-          # 验证 PKGBUILD 是否包含必要字段
-          REQUIRED_FIELDS=("pkgname" "pkgver" "pkgrel" "pkgdesc" "arch")
-          for field in "${REQUIRED_FIELDS[@]}"; do
-            if ! grep -q "^${field}=" PKGBUILD; then
-              echo "Error: Required field '${field}' not found in PKGBUILD"
-              exit 1
-            fi
-          done
+          # 验证 PKGBUILD 中的版本号
+          PKGVER=$(grep "^pkgver=" PKGBUILD | cut -d= -f2 | xargs)
+          echo "PKGBUILD pkgver: $PKGVER"
+          echo "Expected version: $VERSION"
 
-          # 验证 .SRCINFO 是否有效
-          if [ ! -s ".SRCINFO" ]; then
-            echo "Error: .SRCINFO is empty or not generated"
-            exit 1
+          if [[ "$PKGVER" != "$VERSION" ]]; then
+            echo "⚠️ Warning: PKGBUILD version mismatch!"
+            echo "  Expected: $VERSION"
+            echo "  Found: $PKGVER"
+          else
+            echo "✅ PKGBUILD version matches"
           fi
 
           # 验证 .SRCINFO 中的版本号
-          if ! grep -q "pkgver = ${{ steps.get_version.outputs.VERSION }}" .SRCINFO; then
-            echo "Warning: Version mismatch in .SRCINFO"
-            echo "Expected: ${{ steps.get_version.outputs.VERSION }}"
-            echo "Found: $(grep "pkgver =" .SRCINFO)"
+          if [ -f ".SRCINFO" ]; then
+            SRCINFO_VER=$(grep "^[[:space:]]*pkgver =" .SRCINFO | head -1 | awk '{print $3}')
+            echo ".SRCINFO pkgver: $SRCINFO_VER"
+
+            if [[ "$SRCINFO_VER" != "$VERSION" ]]; then
+              echo "⚠️ Warning: .SRCINFO version mismatch!"
+              echo "  Expected: $VERSION"
+              echo "  Found: $SRCINFO_VER"
+            else
+              echo "✅ .SRCINFO version matches"
+            fi
           fi
 
       - name: Publish AUR package
@@ -183,8 +232,6 @@ jobs:
           pkgbuild: PKGBUILD
           assets: |
             .SRCINFO
-            *.install
-            *.patch
           commit_username: "${{ github.actor }}"
           commit_email: "${{ github.actor }}@users.noreply.github.com"
           ssh_private_key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
@@ -195,17 +242,40 @@ jobs:
           test: ${{ github.event_name == 'release' || !github.event.inputs.skip_test }}
           ssh_keyscan_types: rsa,ecdsa,ed25519
 
-      - name: Send notification
+      - name: Send success notification
         if: success()
         run: |
-          echo "✅ Successfully published sealantern v${{ steps.get_version.outputs.VERSION }} to AUR"
-          echo "Package URL: https://aur.archlinux.org/packages/sealantern"
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+          echo "======================================"
+          echo "✅ Successfully published sealantern v${VERSION} to AUR"
+          echo "📦 Package URL: https://aur.archlinux.org/packages/sealantern"
+          echo "======================================"
 
       - name: Send failure notification
         if: failure()
         run: |
-          echo "❌ Failed to publish sealantern v${{ steps.get_version.outputs.VERSION }} to AUR"
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+          echo "======================================"
+          echo "❌ Failed to publish sealantern v${VERSION} to AUR"
           echo "Please check the workflow logs for details."
+          echo "======================================"
+
+          # 输出调试信息
+          echo "Debug information:"
+          echo "Event name: ${{ github.event_name }}"
+          echo "Version from inputs: ${{ github.event.inputs.version }}"
+          echo "Version from get_version: ${{ steps.get_version.outputs.VERSION }}"
+
+          # 检查文件
+          echo "Files in workspace:"
+          ls -la
+
+          if [ -f "PKGBUILD" ]; then
+            echo "PKGBUILD exists, content:"
+            head -20 PKGBUILD
+          else
+            echo "PKGBUILD not found!"
+          fi
 
       - name: Cleanup
         if: always()
