chore: align CI checks and add Windows wry policy troubleshooting

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -46,14 +46,11 @@ jobs:
       - name: 安装 Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
+          node-version: "20"
+          cache: "npm"
 
       - name: 安装前端依赖
-        run: npm install
+        run: npm ci
 
-      - name: 运行格式化并检查前端 Lint
-        run: |
-          npm run fmt && npm run lint
-
-      - name: 检查前端构建
-        run: npm run build
+      - name: 运行前端全量检查
+        run: npm run check
