--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,8 @@ jobs:
       - name: 安装 Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
+          node-version: "20"
+          cache: "npm"
 
       - name: 安装 Rust 工具链
         uses: dtolnay/rust-toolchain@stable
@@ -54,7 +55,12 @@ jobs:
 
       - name: 安装前端依赖 (npm)
         # 默认用npm,最稳妥
-        run: npm install
+        run: npm ci
+
+      - name: 发布前检查（Lint + 类型检查）
+        run: |
+          npm run lint --if-present
+          npm run typecheck --if-present
 
       - name: 构建并发布
         uses: tauri-apps/tauri-action@v0
