--- a/.github/workflows/push-aur.yml
+++ b/.github/workflows/push-aur.yml
@@ -1,6 +1,10 @@
 name: Publish to AUR
 
 on:
+  push:
+    tags:
+      - "v*" # 匹配 v0.7.3, v1.0.0 等
+      - "sea-lantern-v*" # 匹配 sea-lantern-v0.7.3
   release:
     types: [published]
   workflow_dispatch:
